fix error dialog on safari and mozilla

--- a/site/src/components/Modal/style.scss
+++ b/site/src/components/Modal/style.scss
@@ -47,4 +47,13 @@
       fill: white;
     }
   }
+  .backdrop {
+    /* polyfill */
+    background-color: #fff !important;
+    // position: fixed;
+    // width: 100vw;
+    // height: 100vh;
 }
+}
+
+
